syntax = "proto3";

option java_package = "generated";

message Packet{
  int64 id = 1;
  Size size = 2;
  Status status = 3;
  int64 currentAddressId = 4;
  int64 finalAddressId = 5;
  int64 senderId = 6;
  int64 receiverId = 7;
  string trackingNumber = 8;
}

message Size{
  int64 id = 1;
  string sizeName = 2;
  string sizeLength = 3;
  string sizeWidth = 4;
  string sizeHeight = 5;
}

message Status{
  int64 id = 1;
  string status = 2;
  string statusDescription = 3;
}

message Id{
  int64 id = 1;
}

message Packets{
  repeated Packet packet = 1;
}

message GetPacketTrackingNumber{
  string trackingNumber = 1;
}

message GetPacketIdRpc{
  int64 id = 1;
}

message AddPacket{
  int64  senderId = 1;
  Size size = 2;
  int64  receiverId = 3;
  int64 finalDestinationId = 4;
}

service PacketService{
  rpc addPacket(AddPacket) returns (Packet);
  rpc getPacketById(GetPacketIdRpc) returns(Packet);
  rpc getPacketByTrackingNumber(GetPacketTrackingNumber) returns(Packet);
  rpc getAllPacketsBySender(Id) returns(Packets);
  rpc getAllPacketsByReceiver(Id) returns(Packets);
}

